--- a/components/ResetPasswordComponent.html
+++ b/components/ResetPasswordComponent.html
@@ -9,6 +9,7 @@
 
         <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
 	      <link rel="stylesheet" href="../styles/style.css">
+        <link rel="stylesheet" href="../styles/material.css">
     </head>
     <body>
 
@@ -96,7 +97,7 @@
 
             <tr>
                 <td class="col-md-3">styleUrls</td>
-                <td class="col-md-9"><code>./reset-password.component.css</code></td>
+                <td class="col-md-9"><code>./reset-password.component.scss</code></td>
             </tr>
 
 
@@ -151,10 +152,8 @@
                     <td class="col-md-4">
                         <ul class="index-list">
                             <li>
-                                <a href="#getConfirmPasswordErrors">getConfirmPasswordErrors</a>
-                            </li>
-                            <li>
-                                <a href="#getPasswordErrors">getPasswordErrors</a>
+                                    <span class="modifier">Public</span>
+                                <a href="#displayFormErrors">displayFormErrors</a>
                             </li>
                             <li>
                                 <a href="#ngOnInit">ngOnInit</a>
@@ -199,7 +198,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/auth/email/reset-password/reset-password.component.ts:17</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/auth/email/reset-password/reset-password.component.ts:18</a></div>
                             </td>
                         </tr>
 
@@ -298,79 +297,83 @@
         <tbody>
             <tr>
                 <td class="col-md-4">
-                    <a name="getConfirmPasswordErrors"></a>
+                    <a name="displayFormErrors"></a>
                     <span class="name">
                         <b>
-                            getConfirmPasswordErrors
+                            <span class="modifier">Public</span>
+                            displayFormErrors
                         </b>
-                        <a href="#getConfirmPasswordErrors"><span class="icon ion-ios-link"></span></a>
+                        <a href="#displayFormErrors"><span class="icon ion-ios-link"></span></a>
                     </span>
                 </td>
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>getConfirmPasswordErrors()</code>
+                    <span class="modifier-icon icon ion-ios-reset"></span>
+                    <code>displayFormErrors(control: <a href="https://angular.io/api/forms/FormControl" target="_blank">FormControl</a>, placeholder: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank">string</a>)</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="61"
-                            class="link-to-prism">src/app/auth/email/reset-password/reset-password.component.ts:61</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="50"
+                            class="link-to-prism">src/app/auth/email/reset-password/reset-password.component.ts:50</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-description"><p>Get confirm password errors.</p>
+                    <div class="io-description"><p>Displays control errors.</p>
 </div>
 
                     <div class="io-description">
-                        <b>Returns : </b>    <code>&quot;You must confirm your password&quot; | &quot;Passwords do not match&quot;</code>
+                        <b>Parameters :</b>
+                        <table class="params">
+                            <thead>
+                                <tr>
+                                    <td>Name</td>
+                                    <td>Type</td>
+                                    <td>Optional</td>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>control</td>
+                                    <td>
+                                                <code><a href="https://angular.io/api/forms/FormControl" target="_blank" >FormControl</a></code>
+                                    </td>
+
+                                    <td>
+                                        No
+                                    </td>
+
+
+                                </tr>
+                                <tr>
+                                    <td>placeholder</td>
+                                    <td>
+                                                <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                    </td>
+
+                                    <td>
+                                        No
+                                    </td>
+
+
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div>
+                    </div>
+                    <div class="io-description">
+                        <b>Returns : </b>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
 
                     </div>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-    <table class="table table-sm table-bordered">
-        <tbody>
-            <tr>
-                <td class="col-md-4">
-                    <a name="getPasswordErrors"></a>
-                    <span class="name">
-                        <b>
-                            getPasswordErrors
-                        </b>
-                        <a href="#getPasswordErrors"><span class="icon ion-ios-link"></span></a>
-                    </span>
-                </td>
-            </tr>
-            <tr>
-                <td class="col-md-4">
-<code>getPasswordErrors()</code>
-                </td>
-            </tr>
-
-
-            <tr>
-                <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="49"
-                            class="link-to-prism">src/app/auth/email/reset-password/reset-password.component.ts:49</a></div>
-                </td>
-            </tr>
-
-
-            <tr>
-                <td class="col-md-4">
-                    <div class="io-description"><p>Get password errors.</p>
-</div>
-
                     <div class="io-description">
-                        <b>Returns : </b>    <code>&quot;You must enter a password&quot; | &quot;The password is too short. Please enter minimum 6 characters&quot;</code>
-
+                        
                     </div>
                 </td>
             </tr>
@@ -398,8 +401,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="27"
-                            class="link-to-prism">src/app/auth/email/reset-password/reset-password.component.ts:27</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="28"
+                            class="link-to-prism">src/app/auth/email/reset-password/reset-password.component.ts:28</a></div>
                 </td>
             </tr>
 
@@ -437,8 +440,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="73"
-                            class="link-to-prism">src/app/auth/email/reset-password/reset-password.component.ts:73</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="57"
+                            class="link-to-prism">src/app/auth/email/reset-password/reset-password.component.ts:57</a></div>
                 </td>
             </tr>
 
@@ -481,7 +484,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/auth/email/reset-password/reset-password.component.ts:17</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/auth/email/reset-password/reset-password.component.ts:18</a></div>
                             </td>
                         </tr>
 
@@ -507,7 +510,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/auth/email/reset-password/reset-password.component.ts:16</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/auth/email/reset-password/reset-password.component.ts:17</a></div>
                             </td>
                         </tr>
 
@@ -534,7 +537,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/app/auth/email/reset-password/reset-password.component.ts:15</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/auth/email/reset-password/reset-password.component.ts:16</a></div>
                             </td>
                         </tr>
 
@@ -563,7 +566,7 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="42" class="link-to-prism">src/app/auth/email/reset-password/reset-password.component.ts:42</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="43" class="link-to-prism">src/app/auth/email/reset-password/reset-password.component.ts:43</a></div>
                                 </td>
                             </tr>
                     <tr>
@@ -586,17 +589,18 @@
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component, OnInit } from &#x27;@angular/core&#x27;;
-import { FormGroup, FormBuilder, Validators, AbstractControl } from &#x27;@angular/forms&#x27;;
+import { FormGroup, FormBuilder, Validators, AbstractControl, FormControl } from &#x27;@angular/forms&#x27;;
 import { MustMatch } from &#x27;../../signup/must-match.validator&#x27;;
 import { AuthService } from &#x27;../../auth.service&#x27;;
 import { UIService } from &#x27;src/app/shared/ui.service&#x27;;
 import { Router, ActivatedRoute } from &#x27;@angular/router&#x27;;
 import { map, switchMap } from &#x27;rxjs/operators&#x27;;
+import { displayFormErrors } from &#x27;src/app/shared/form-errors.utils&#x27;;
 
 @Component({
   selector: &#x27;app-reset-password&#x27;,
   templateUrl: &#x27;./reset-password.component.html&#x27;,
-  styleUrls: [&#x27;./reset-password.component.css&#x27;]
+  styleUrls: [&#x27;./reset-password.component.scss&#x27;]
 })
 export class ResetPasswordComponent implements OnInit {
   resetForm: FormGroup;
@@ -631,27 +635,10 @@ export class ResetPasswordComponent implements OnInit {
   }
 
   /**
-   * Get password errors.
+   * Displays control errors.
    */
-  getPasswordErrors() {
-    if (this.formCtrls.password.hasError(&#x27;required&#x27;)) {
-      return &#x27;You must enter a password&#x27;;
-    } else if (this.formCtrls.password.hasError(&#x27;minlength&#x27;)) {
-      return &#x27;The password is too short. Please enter minimum 6 characters&#x27;;
-    }
-    return null;
-  }
-
-  /**
-   * Get confirm password errors.
-   */
-  getConfirmPasswordErrors() {
-    if (this.formCtrls.confirmPassword.hasError(&#x27;required&#x27;)) {
-      return &#x27;You must confirm your password&#x27;;
-    } else if (this.formCtrls.confirmPassword.hasError(&#x27;mustMatch&#x27;)) {
-      return &#x27;Passwords do not match&#x27;;
-    }
-    return null;
+  public displayFormErrors(control: FormControl, placeholder: string): string {
+    return displayFormErrors(control, placeholder);
   }
 
   /**
@@ -687,7 +674,7 @@ export class ResetPasswordComponent implements OnInit {
       {{ hidePassword ? &#x27;visibility_off&#x27; : &#x27;visibility&#x27; }}
     &lt;/mat-icon&gt;
     &lt;mat-hint align&#x3D;&quot;end&quot;&gt;{{ formCtrls.password.value?.length || 0 }}/6&lt;/mat-hint&gt;
-    &lt;mat-error *ngIf&#x3D;&quot;formCtrls.password.invalid&quot;&gt;{{ getPasswordErrors() }}&lt;/mat-error&gt;
+    &lt;mat-error *ngIf&#x3D;&quot;formCtrls.password.invalid&quot;&gt;{{ displayFormErrors(formCtrls.password, &#x27;Password&#x27;) }}&lt;/mat-error&gt;
   &lt;/mat-form-field&gt;
 
   &lt;mat-form-field&gt;
@@ -700,7 +687,9 @@ export class ResetPasswordComponent implements OnInit {
     &lt;mat-icon matSuffix (click)&#x3D;&quot;hideConfirmPassword &#x3D; !hideConfirmPassword&quot;&gt;
       {{ hideConfirmPassword ? &#x27;visibility_off&#x27; : &#x27;visibility&#x27; }}
     &lt;/mat-icon&gt;
-    &lt;mat-error *ngIf&#x3D;&quot;formCtrls.confirmPassword.invalid&quot;&gt;{{ getConfirmPasswordErrors() }}&lt;/mat-error&gt;
+    &lt;mat-error *ngIf&#x3D;&quot;formCtrls.confirmPassword.invalid&quot;&gt;
+      {{ displayFormErrors(formCtrls.confirmPassword, &#x27;Confirm password&#x27;) }}
+    &lt;/mat-error&gt;
   &lt;/mat-form-field&gt;
   &lt;button mat-button type&#x3D;&quot;submit&quot; color&#x3D;&quot;primary&quot; [disabled]&#x3D;&quot;resetForm.invalid&quot;&gt;Submit&lt;/button&gt;
 &lt;/form&gt;
@@ -709,7 +698,7 @@ export class ResetPasswordComponent implements OnInit {
 
     <div class="tab-pane fade " id="c-styleData">
                 <p class="comment">
-                    <code>./reset-password.component.css</code>
+                    <code>./reset-password.component.scss</code>
                 </p>
                 <pre class="line-numbers"><code class="language-scss"></code></pre>
     </div>
@@ -739,8 +728,8 @@ export class ResetPasswordComponent implements OnInit {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><form class="form user-form" [formGroup]="resetForm" (ngSubmit)="onSubmit()">  <mat-form-field hintLabel="Password must contain minim 6 characters">    <input      matInput      [type]="hidePassword ? \'password\' : \'text\'"      placeholder="Enter a password"      formControlName="password"    />    <mat-icon matSuffix (click)="hidePassword = !hidePassword">      {{ hidePassword ? \'visibility_off\' : \'visibility\' }}    </mat-icon>    <mat-hint align="end">{{ formCtrls.password.value?.length || 0 }}/6</mat-hint>    <mat-error *ngIf="formCtrls.password.invalid">{{ getPasswordErrors() }}</mat-error>  </mat-form-field>  <mat-form-field>    <input      matInput      [type]="hideConfirmPassword ? \'password\' : \'text\'"      placeholder="Confirm your password"      formControlName="confirmPassword"    />    <mat-icon matSuffix (click)="hideConfirmPassword = !hideConfirmPassword">      {{ hideConfirmPassword ? \'visibility_off\' : \'visibility\' }}    </mat-icon>    <mat-error *ngIf="formCtrls.confirmPassword.invalid">{{ getConfirmPasswordErrors() }}</mat-error>  </mat-form-field>  <button mat-button type="submit" color="primary" [disabled]="resetForm.invalid">Submit</button></form></div>'
-    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'BoardComponent', 'selector': 'app-board'},{'name': 'CreateTaskComponent', 'selector': 'app-create-task'},{'name': 'DialogComponent', 'selector': 'app-dialog'},{'name': 'ForgotPasswordComponent', 'selector': 'app-forgot-password'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'LoginComponent', 'selector': 'app-login'},{'name': 'ModalComponent', 'selector': 'app-modal'},{'name': 'PageNotFoundComponent', 'selector': 'app-page-not-found'},{'name': 'ResetPasswordComponent', 'selector': 'app-reset-password'},{'name': 'SidenavComponent', 'selector': 'app-sidenav'},{'name': 'SignupComponent', 'selector': 'app-signup'},{'name': 'TasksCardListComponent', 'selector': 'app-tasks-card-list'},{'name': 'TasksComponent', 'selector': 'app-tasks'},{'name': 'TopnavComponent', 'selector': 'app-topnav'},{'name': 'VerifyEmailComponent', 'selector': 'app-verify-email'}];
+        var COMPONENT_TEMPLATE = '<div><form class="form user-form" [formGroup]="resetForm" (ngSubmit)="onSubmit()">  <mat-form-field hintLabel="Password must contain minim 6 characters">    <input      matInput      [type]="hidePassword ? \'password\' : \'text\'"      placeholder="Enter a password"      formControlName="password"    />    <mat-icon matSuffix (click)="hidePassword = !hidePassword">      {{ hidePassword ? \'visibility_off\' : \'visibility\' }}    </mat-icon>    <mat-hint align="end">{{ formCtrls.password.value?.length || 0 }}/6</mat-hint>    <mat-error *ngIf="formCtrls.password.invalid">{{ displayFormErrors(formCtrls.password, \'Password\') }}</mat-error>  </mat-form-field>  <mat-form-field>    <input      matInput      [type]="hideConfirmPassword ? \'password\' : \'text\'"      placeholder="Confirm your password"      formControlName="confirmPassword"    />    <mat-icon matSuffix (click)="hideConfirmPassword = !hideConfirmPassword">      {{ hideConfirmPassword ? \'visibility_off\' : \'visibility\' }}    </mat-icon>    <mat-error *ngIf="formCtrls.confirmPassword.invalid">      {{ displayFormErrors(formCtrls.confirmPassword, \'Confirm password\') }}    </mat-error>  </mat-form-field>  <button mat-button type="submit" color="primary" [disabled]="resetForm.invalid">Submit</button></form></div>'
+    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'CreateProjectComponent', 'selector': 'app-create-project'},{'name': 'CreateTaskComponent', 'selector': 'app-create-task'},{'name': 'DialogComponent', 'selector': 'app-dialog'},{'name': 'FooterComponent', 'selector': 'app-footer'},{'name': 'ForgotPasswordComponent', 'selector': 'app-forgot-password'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'LoginComponent', 'selector': 'app-login'},{'name': 'ModalComponent', 'selector': 'app-modal'},{'name': 'PageNotFoundComponent', 'selector': 'app-page-not-found'},{'name': 'ProjectsComponent', 'selector': 'app-projects'},{'name': 'ResetPasswordComponent', 'selector': 'app-reset-password'},{'name': 'SidenavComponent', 'selector': 'app-sidenav'},{'name': 'SignupComponent', 'selector': 'app-signup'},{'name': 'TasksCardListComponent', 'selector': 'app-tasks-card-list'},{'name': 'TasksComponent', 'selector': 'app-tasks'},{'name': 'TopnavComponent', 'selector': 'app-topnav'},{'name': 'VerifyEmailComponent', 'selector': 'app-verify-email'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'ResetPasswordComponent'};
 </script>
