--- a/components/ForgotPasswordComponent.html
+++ b/components/ForgotPasswordComponent.html
@@ -9,6 +9,7 @@
 
         <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
 	      <link rel="stylesheet" href="../styles/style.css">
+        <link rel="stylesheet" href="../styles/material.css">
     </head>
     <body>
 
@@ -96,7 +97,7 @@
 
             <tr>
                 <td class="col-md-3">styleUrls</td>
-                <td class="col-md-9"><code>./forgot-password.component.css</code></td>
+                <td class="col-md-9"><code>./forgot-password.component.scss</code></td>
             </tr>
 
 
@@ -130,6 +131,7 @@
                     <td class="col-md-4">
                         <ul class="index-list">
                             <li>
+                                    <span class="modifier">Public</span>
                                 <a href="#email">email</a>
                             </li>
                         </ul>
@@ -145,15 +147,18 @@
                     <td class="col-md-4">
                         <ul class="index-list">
                             <li>
-                                <a href="#getEmailErrors">getEmailErrors</a>
+                                    <span class="modifier">Public</span>
+                                <a href="#displayFormErrors">displayFormErrors</a>
                             </li>
                             <li>
                                 <a href="#ngOnInit">ngOnInit</a>
                             </li>
                             <li>
+                                    <span class="modifier">Public</span>
                                 <a href="#onClose">onClose</a>
                             </li>
                             <li>
+                                    <span class="modifier">Public</span>
                                 <a href="#onSubmit">onSubmit</a>
                             </li>
                         </ul>
@@ -193,7 +198,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/auth/forgot-password/forgot-password.component.ts:13</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/auth/forgot-password/forgot-password.component.ts:14</a></div>
                             </td>
                         </tr>
 
@@ -262,7 +267,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/auth/forgot-password/forgot-password.component.ts:13</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/auth/forgot-password/forgot-password.component.ts:14</a></div>
                             </td>
                         </tr>
             </tbody>
@@ -279,38 +284,83 @@
         <tbody>
             <tr>
                 <td class="col-md-4">
-                    <a name="getEmailErrors"></a>
+                    <a name="displayFormErrors"></a>
                     <span class="name">
                         <b>
-                            getEmailErrors
+                            <span class="modifier">Public</span>
+                            displayFormErrors
                         </b>
-                        <a href="#getEmailErrors"><span class="icon ion-ios-link"></span></a>
+                        <a href="#displayFormErrors"><span class="icon ion-ios-link"></span></a>
                     </span>
                 </td>
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>getEmailErrors()</code>
+                    <span class="modifier-icon icon ion-ios-reset"></span>
+                    <code>displayFormErrors(control: <a href="https://angular.io/api/forms/FormControl" target="_blank">FormControl</a>, placeholder: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank">string</a>)</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="24"
-                            class="link-to-prism">src/app/auth/forgot-password/forgot-password.component.ts:24</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="25"
+                            class="link-to-prism">src/app/auth/forgot-password/forgot-password.component.ts:25</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-description"><p>Handle email errors.</p>
+                    <div class="io-description"><p>Displays control errors.</p>
 </div>
 
                     <div class="io-description">
+                        <b>Parameters :</b>
+                        <table class="params">
+                            <thead>
+                                <tr>
+                                    <td>Name</td>
+                                    <td>Type</td>
+                                    <td>Optional</td>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>control</td>
+                                    <td>
+                                                <code><a href="https://angular.io/api/forms/FormControl" target="_blank" >FormControl</a></code>
+                                    </td>
+
+                                    <td>
+                                        No
+                                    </td>
+
+
+                                </tr>
+                                <tr>
+                                    <td>placeholder</td>
+                                    <td>
+                                                <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                    </td>
+
+                                    <td>
+                                        No
+                                    </td>
+
+
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div>
+                    </div>
+                    <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
 
+                    </div>
+                    <div class="io-description">
+                        
                     </div>
                 </td>
             </tr>
@@ -338,8 +388,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="17"
-                            class="link-to-prism">src/app/auth/forgot-password/forgot-password.component.ts:17</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="18"
+                            class="link-to-prism">src/app/auth/forgot-password/forgot-password.component.ts:18</a></div>
                 </td>
             </tr>
 
@@ -362,6 +412,7 @@
                     <a name="onClose"></a>
                     <span class="name">
                         <b>
+                            <span class="modifier">Public</span>
                             onClose
                         </b>
                         <a href="#onClose"><span class="icon ion-ios-link"></span></a>
@@ -370,15 +421,16 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>onClose()</code>
+                    <span class="modifier-icon icon ion-ios-reset"></span>
+                    <code>onClose()</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="46"
-                            class="link-to-prism">src/app/auth/forgot-password/forgot-password.component.ts:46</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="42"
+                            class="link-to-prism">src/app/auth/forgot-password/forgot-password.component.ts:42</a></div>
                 </td>
             </tr>
 
@@ -403,6 +455,7 @@
                     <a name="onSubmit"></a>
                     <span class="name">
                         <b>
+                            <span class="modifier">Public</span>
                             onSubmit
                         </b>
                         <a href="#onSubmit"><span class="icon ion-ios-link"></span></a>
@@ -411,22 +464,23 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>onSubmit()</code>
+                    <span class="modifier-icon icon ion-ios-reset"></span>
+                    <code>onSubmit()</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="36"
-                            class="link-to-prism">src/app/auth/forgot-password/forgot-password.component.ts:36</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="32"
+                            class="link-to-prism">src/app/auth/forgot-password/forgot-password.component.ts:32</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-description"><p>Send email.</p>
+                    <div class="io-description"><p>Send reset password email.</p>
 </div>
 
                     <div class="io-description">
@@ -450,6 +504,7 @@
                         <a name="email"></a>
                         <span class="name">
                             <b>
+                                <span class="modifier">Public</span>
                             email</b>
                             <a href="#email"><span class="icon ion-ios-link"></span></a>
                         </span>
@@ -463,7 +518,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/app/auth/forgot-password/forgot-password.component.ts:12</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/auth/forgot-password/forgot-password.component.ts:13</a></div>
                             </td>
                         </tr>
 
@@ -480,38 +535,34 @@
 import { FormControl, Validators } from &#x27;@angular/forms&#x27;;
 import { AuthService } from &#x27;../auth.service&#x27;;
 import { UIService } from &#x27;src/app/shared/ui.service&#x27;;
+import { displayFormErrors } from &#x27;src/app/shared/form-errors.utils&#x27;;
 
 @Component({
   selector: &#x27;app-forgot-password&#x27;,
   templateUrl: &#x27;./forgot-password.component.html&#x27;,
-  styleUrls: [&#x27;./forgot-password.component.css&#x27;]
+  styleUrls: [&#x27;./forgot-password.component.scss&#x27;]
 })
 export class ForgotPasswordComponent implements OnInit {
-  email: FormControl;
+  public email: FormControl;
   @Output() close &#x3D; new EventEmitter&lt;void&gt;();
 
   constructor(private authService: AuthService, private uiService: UIService) {}
 
-  ngOnInit() {
+  ngOnInit(): void {
     this.email &#x3D; new FormControl(null, [Validators.required, Validators.email]);
   }
 
   /**
-   * Handle email errors.
+   * Displays control errors.
    */
-  getEmailErrors(): string {
-    if (this.email.hasError(&#x27;required&#x27;)) {
-      return &#x27;You must enter your email&#x27;;
-    } else if (this.email.hasError(&#x27;email&#x27;)) {
-      return &#x27;This is not a valid email&#x27;;
-    }
-    return null;
+  public displayFormErrors(control: FormControl, placeholder: string): string {
+    return displayFormErrors(control, placeholder);
   }
 
   /**
-   * Send email.
+   * Send reset password email.
    */
-  onSubmit() {
+  public onSubmit(): void {
     this.authService.forgotPassword(this.email.value).subscribe(() &#x3D;&gt; {
       this.uiService.showSnackBar(&#x27;A link for resetting your password is in its way to your inbox.&#x27;, null, 5000, &#x27;top&#x27;);
       this.onClose();
@@ -521,7 +572,7 @@ export class ForgotPasswordComponent implements OnInit {
   /**
    * Close modal.
    */
-  onClose() {
+  public onClose(): void {
     this.close.emit();
   }
 }
@@ -532,7 +583,9 @@ export class ForgotPasswordComponent implements OnInit {
         <pre class="line-numbers"><code class="language-html">&lt;app-modal title&#x3D;&quot;Forgot Password&quot; (close)&#x3D;&quot;onClose()&quot;&gt;
   &lt;mat-form-field&gt;
     &lt;input matInput placeholder&#x3D;&quot;Email&quot; [formControl]&#x3D;&quot;email&quot; /&gt;
-    &lt;mat-error *ngIf&#x3D;&quot;email.invalid &amp;&amp; (email.dirty || email.touched)&quot;&gt;{{ getEmailErrors() }}&lt;/mat-error&gt;
+    &lt;mat-error *ngIf&#x3D;&quot;email.invalid &amp;&amp; (email.dirty || email.touched)&quot;&gt;
+      {{ displayFormErrors(email, &#x27;Email&#x27;) }}
+    &lt;/mat-error&gt;
   &lt;/mat-form-field&gt;
   &lt;div&gt;
     &lt;button mat-button color&#x3D;&quot;primary&quot; [disabled]&#x3D;&quot;email.invalid&quot; (click)&#x3D;&quot;onSubmit()&quot;&gt;Submit&lt;/button&gt;
@@ -544,11 +597,12 @@ export class ForgotPasswordComponent implements OnInit {
 
     <div class="tab-pane fade " id="c-styleData">
                 <p class="comment">
-                    <code>./forgot-password.component.css</code>
+                    <code>./forgot-password.component.scss</code>
                 </p>
                 <pre class="line-numbers"><code class="language-scss">.mat-form-field {
   width: 90%;
-}</code></pre>
+}
+</code></pre>
     </div>
 
     <div class="tab-pane fade " id="c-tree">
@@ -576,8 +630,8 @@ export class ForgotPasswordComponent implements OnInit {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><app-modal title="Forgot Password" (close)="onClose()">  <mat-form-field>    <input matInput placeholder="Email" [formControl]="email" />    <mat-error *ngIf="email.invalid && (email.dirty || email.touched)">{{ getEmailErrors() }}</mat-error>  </mat-form-field>  <div>    <button mat-button color="primary" [disabled]="email.invalid" (click)="onSubmit()">Submit</button>    <button mat-button color="warn" (click)="onClose()">Cancel</button>  </div></app-modal></div>'
-    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'BoardComponent', 'selector': 'app-board'},{'name': 'CreateTaskComponent', 'selector': 'app-create-task'},{'name': 'DialogComponent', 'selector': 'app-dialog'},{'name': 'ForgotPasswordComponent', 'selector': 'app-forgot-password'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'LoginComponent', 'selector': 'app-login'},{'name': 'ModalComponent', 'selector': 'app-modal'},{'name': 'PageNotFoundComponent', 'selector': 'app-page-not-found'},{'name': 'ResetPasswordComponent', 'selector': 'app-reset-password'},{'name': 'SidenavComponent', 'selector': 'app-sidenav'},{'name': 'SignupComponent', 'selector': 'app-signup'},{'name': 'TasksCardListComponent', 'selector': 'app-tasks-card-list'},{'name': 'TasksComponent', 'selector': 'app-tasks'},{'name': 'TopnavComponent', 'selector': 'app-topnav'},{'name': 'VerifyEmailComponent', 'selector': 'app-verify-email'}];
+        var COMPONENT_TEMPLATE = '<div><app-modal title="Forgot Password" (close)="onClose()">  <mat-form-field>    <input matInput placeholder="Email" [formControl]="email" />    <mat-error *ngIf="email.invalid && (email.dirty || email.touched)">      {{ displayFormErrors(email, \'Email\') }}    </mat-error>  </mat-form-field>  <div>    <button mat-button color="primary" [disabled]="email.invalid" (click)="onSubmit()">Submit</button>    <button mat-button color="warn" (click)="onClose()">Cancel</button>  </div></app-modal></div>'
+    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'CreateProjectComponent', 'selector': 'app-create-project'},{'name': 'CreateTaskComponent', 'selector': 'app-create-task'},{'name': 'DialogComponent', 'selector': 'app-dialog'},{'name': 'FooterComponent', 'selector': 'app-footer'},{'name': 'ForgotPasswordComponent', 'selector': 'app-forgot-password'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'LoginComponent', 'selector': 'app-login'},{'name': 'ModalComponent', 'selector': 'app-modal'},{'name': 'PageNotFoundComponent', 'selector': 'app-page-not-found'},{'name': 'ProjectsComponent', 'selector': 'app-projects'},{'name': 'ResetPasswordComponent', 'selector': 'app-reset-password'},{'name': 'SidenavComponent', 'selector': 'app-sidenav'},{'name': 'SignupComponent', 'selector': 'app-signup'},{'name': 'TasksCardListComponent', 'selector': 'app-tasks-card-list'},{'name': 'TasksComponent', 'selector': 'app-tasks'},{'name': 'TopnavComponent', 'selector': 'app-topnav'},{'name': 'VerifyEmailComponent', 'selector': 'app-verify-email'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'ForgotPasswordComponent'};
 </script>
