--- a/components/VerifyEmailComponent.html
+++ b/components/VerifyEmailComponent.html
@@ -9,6 +9,7 @@
 
         <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
 	      <link rel="stylesheet" href="../styles/style.css">
+        <link rel="stylesheet" href="../styles/material.css">
     </head>
     <body>
 
@@ -96,7 +97,7 @@
 
             <tr>
                 <td class="col-md-3">styleUrls</td>
-                <td class="col-md-9"><code>./verify-email.component.css</code></td>
+                <td class="col-md-9"><code>./verify-email.component.scss</code></td>
             </tr>
 
 
@@ -151,7 +152,8 @@
                     <td class="col-md-4">
                         <ul class="index-list">
                             <li>
-                                <a href="#getEmailErrors">getEmailErrors</a>
+                                    <span class="modifier">Public</span>
+                                <a href="#displayFormErrors">displayFormErrors</a>
                             </li>
                             <li>
                                 <a href="#ngOnInit">ngOnInit</a>
@@ -182,7 +184,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/auth/email/verify-email/verify-email.component.ts:17</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/auth/email/verify-email/verify-email.component.ts:18</a></div>
                             </td>
                         </tr>
 
@@ -269,38 +271,83 @@
         <tbody>
             <tr>
                 <td class="col-md-4">
-                    <a name="getEmailErrors"></a>
+                    <a name="displayFormErrors"></a>
                     <span class="name">
                         <b>
-                            getEmailErrors
+                            <span class="modifier">Public</span>
+                            displayFormErrors
                         </b>
-                        <a href="#getEmailErrors"><span class="icon ion-ios-link"></span></a>
+                        <a href="#displayFormErrors"><span class="icon ion-ios-link"></span></a>
                     </span>
                 </td>
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>getEmailErrors()</code>
+                    <span class="modifier-icon icon ion-ios-reset"></span>
+                    <code>displayFormErrors(control: <a href="https://angular.io/api/forms/FormControl" target="_blank">FormControl</a>, placeholder: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank">string</a>)</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="52"
-                            class="link-to-prism">src/app/auth/email/verify-email/verify-email.component.ts:52</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="53"
+                            class="link-to-prism">src/app/auth/email/verify-email/verify-email.component.ts:53</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-description"><p>Handle email errors.</p>
+                    <div class="io-description"><p>Displays control errors.</p>
 </div>
 
                     <div class="io-description">
+                        <b>Parameters :</b>
+                        <table class="params">
+                            <thead>
+                                <tr>
+                                    <td>Name</td>
+                                    <td>Type</td>
+                                    <td>Optional</td>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>control</td>
+                                    <td>
+                                                <code><a href="https://angular.io/api/forms/FormControl" target="_blank" >FormControl</a></code>
+                                    </td>
+
+                                    <td>
+                                        No
+                                    </td>
+
+
+                                </tr>
+                                <tr>
+                                    <td>placeholder</td>
+                                    <td>
+                                                <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                    </td>
+
+                                    <td>
+                                        No
+                                    </td>
+
+
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div>
+                    </div>
+                    <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
 
+                    </div>
+                    <div class="io-description">
+                        
                     </div>
                 </td>
             </tr>
@@ -328,8 +375,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="29"
-                            class="link-to-prism">src/app/auth/email/verify-email/verify-email.component.ts:29</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="30"
+                            class="link-to-prism">src/app/auth/email/verify-email/verify-email.component.ts:30</a></div>
                 </td>
             </tr>
 
@@ -369,8 +416,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="64"
-                            class="link-to-prism">src/app/auth/email/verify-email/verify-email.component.ts:64</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="60"
+                            class="link-to-prism">src/app/auth/email/verify-email/verify-email.component.ts:60</a></div>
                 </td>
             </tr>
 
@@ -414,7 +461,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/app/auth/email/verify-email/verify-email.component.ts:15</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/auth/email/verify-email/verify-email.component.ts:16</a></div>
                             </td>
                         </tr>
 
@@ -441,7 +488,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/auth/email/verify-email/verify-email.component.ts:16</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/auth/email/verify-email/verify-email.component.ts:17</a></div>
                             </td>
                         </tr>
 
@@ -468,7 +515,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/auth/email/verify-email/verify-email.component.ts:17</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/auth/email/verify-email/verify-email.component.ts:18</a></div>
                             </td>
                         </tr>
 
@@ -488,11 +535,12 @@ import { UserService } from &#x27;../../user.service&#x27;;
 import { map, concatMap, catchError } from &#x27;rxjs/operators&#x27;;
 import { FormControl, Validators } from &#x27;@angular/forms&#x27;;
 import { UIService } from &#x27;src/app/shared/ui.service&#x27;;
+import { displayFormErrors } from &#x27;src/app/shared/form-errors.utils&#x27;;
 
 @Component({
   selector: &#x27;app-verify-email&#x27;,
   templateUrl: &#x27;./verify-email.component.html&#x27;,
-  styleUrls: [&#x27;./verify-email.component.css&#x27;]
+  styleUrls: [&#x27;./verify-email.component.scss&#x27;]
 })
 export class VerifyEmailComponent implements OnInit {
   email: FormControl;
@@ -530,15 +578,10 @@ export class VerifyEmailComponent implements OnInit {
   }
 
   /**
-   * Handle email errors.
+   * Displays control errors.
    */
-  getEmailErrors(): string {
-    if (this.email.hasError(&#x27;required&#x27;)) {
-      return &#x27;You must enter your email&#x27;;
-    } else if (this.email.hasError(&#x27;email&#x27;)) {
-      return &#x27;This is not a valid email&#x27;;
-    }
-    return null;
+  public displayFormErrors(control: FormControl, placeholder: string): string {
+    return displayFormErrors(control, placeholder);
   }
 
   /**
@@ -569,7 +612,9 @@ export class VerifyEmailComponent implements OnInit {
     &lt;mat-form-field&gt;
       &lt;input matInput type&#x3D;&quot;email&quot; placeholder&#x3D;&quot;Email&quot; [formControl]&#x3D;&quot;email&quot; /&gt;
     &lt;/mat-form-field&gt;
-    &lt;mat-error *ngIf&#x3D;&quot;email.invalid &amp;&amp; (email.dirty || email.touched)&quot;&gt;{{ getEmailErrors() }}&lt;/mat-error&gt;
+    &lt;mat-error *ngIf&#x3D;&quot;email.invalid &amp;&amp; (email.dirty || email.touched)&quot;&gt;
+      {{ displayFormErrors(email, &#x27;Email&#x27;) }}
+    &lt;/mat-error&gt;
     &lt;button mat-button color&#x3D;&quot;primary&quot; [disabled]&#x3D;&quot;email.invalid&quot; (click)&#x3D;&quot;onSubmit()&quot;&gt;Submit&lt;/button&gt;
   &lt;/div&gt;
 &lt;/mat-card&gt;
@@ -578,7 +623,7 @@ export class VerifyEmailComponent implements OnInit {
 
     <div class="tab-pane fade " id="c-styleData">
                 <p class="comment">
-                    <code>./verify-email.component.css</code>
+                    <code>./verify-email.component.scss</code>
                 </p>
                 <pre class="line-numbers"><code class="language-scss">.mat-card {
   min-width: 300px;
@@ -623,8 +668,8 @@ export class VerifyEmailComponent implements OnInit {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><mat-card class="mat-elevation-z6">  <p *ngIf="!errorMessage">Your email has been verfied. You can now log in.</p>  <p *ngIf="errorMessage">{{ errorMessage }}</p>  <div class="email" *ngIf="isVisible">    <p>Enter your email address to receive a new verification email.</p>    <mat-form-field>      <input matInput type="email" placeholder="Email" [formControl]="email" />    </mat-form-field>    <mat-error *ngIf="email.invalid && (email.dirty || email.touched)">{{ getEmailErrors() }}</mat-error>    <button mat-button color="primary" [disabled]="email.invalid" (click)="onSubmit()">Submit</button>  </div></mat-card></div>'
-    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'BoardComponent', 'selector': 'app-board'},{'name': 'CreateTaskComponent', 'selector': 'app-create-task'},{'name': 'DialogComponent', 'selector': 'app-dialog'},{'name': 'ForgotPasswordComponent', 'selector': 'app-forgot-password'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'LoginComponent', 'selector': 'app-login'},{'name': 'ModalComponent', 'selector': 'app-modal'},{'name': 'PageNotFoundComponent', 'selector': 'app-page-not-found'},{'name': 'ResetPasswordComponent', 'selector': 'app-reset-password'},{'name': 'SidenavComponent', 'selector': 'app-sidenav'},{'name': 'SignupComponent', 'selector': 'app-signup'},{'name': 'TasksCardListComponent', 'selector': 'app-tasks-card-list'},{'name': 'TasksComponent', 'selector': 'app-tasks'},{'name': 'TopnavComponent', 'selector': 'app-topnav'},{'name': 'VerifyEmailComponent', 'selector': 'app-verify-email'}];
+        var COMPONENT_TEMPLATE = '<div><mat-card class="mat-elevation-z6">  <p *ngIf="!errorMessage">Your email has been verfied. You can now log in.</p>  <p *ngIf="errorMessage">{{ errorMessage }}</p>  <div class="email" *ngIf="isVisible">    <p>Enter your email address to receive a new verification email.</p>    <mat-form-field>      <input matInput type="email" placeholder="Email" [formControl]="email" />    </mat-form-field>    <mat-error *ngIf="email.invalid && (email.dirty || email.touched)">      {{ displayFormErrors(email, \'Email\') }}    </mat-error>    <button mat-button color="primary" [disabled]="email.invalid" (click)="onSubmit()">Submit</button>  </div></mat-card></div>'
+    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'CreateProjectComponent', 'selector': 'app-create-project'},{'name': 'CreateTaskComponent', 'selector': 'app-create-task'},{'name': 'DialogComponent', 'selector': 'app-dialog'},{'name': 'FooterComponent', 'selector': 'app-footer'},{'name': 'ForgotPasswordComponent', 'selector': 'app-forgot-password'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'LoginComponent', 'selector': 'app-login'},{'name': 'ModalComponent', 'selector': 'app-modal'},{'name': 'PageNotFoundComponent', 'selector': 'app-page-not-found'},{'name': 'ProjectsComponent', 'selector': 'app-projects'},{'name': 'ResetPasswordComponent', 'selector': 'app-reset-password'},{'name': 'SidenavComponent', 'selector': 'app-sidenav'},{'name': 'SignupComponent', 'selector': 'app-signup'},{'name': 'TasksCardListComponent', 'selector': 'app-tasks-card-list'},{'name': 'TasksComponent', 'selector': 'app-tasks'},{'name': 'TopnavComponent', 'selector': 'app-topnav'},{'name': 'VerifyEmailComponent', 'selector': 'app-verify-email'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'VerifyEmailComponent'};
 </script>
